--- a/doc/report/header.tex
+++ b/doc/report/header.tex
@@ -25,7 +25,7 @@
 % set up graphics
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
-\graphicspath{ {fig/} }
+\graphicspath{ {figs/} }
 
 \usepackage[sorting=nyt,backend=biber,bibstyle=alphabetic,citestyle=alphabetic,giveninits=true]{biblatex}
 
