--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -7,6 +7,7 @@
 % Note: You will get an empty bibliography warning when compiling until you include a citation.
 
 \documentclass[10pt]{article}
+\input{macros}
 \input{header}
 \input{defs}
 
@@ -14,7 +15,7 @@
 
 % your title/author/date information go here
 \title{\LaTeX\ Template for STAT 547C Final Project} % replace with your title
-\author{Benjamin Bloem-Reddy} % replace with your name
+\author{Giorgio Sgarbi} % replace with your name
 \date{\today} % replace with your submission date
 
 \bibliography{../../ref/STAT_547C.bib} % add the title of your bibliography file
