add solutions and a few more sections

--- a/doc/report/defs.tex
+++ b/doc/report/defs.tex
@@ -179,5 +179,5 @@
 \def\part{\pi} %fixed partition
 \def\Part{\Pi} %random partition
 
-
+\def\Peskun{\textbf{Peskun (1973)}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
