--- a/doc/report/macros.tex
+++ b/doc/report/macros.tex
@@ -1,5 +1,6 @@
-\usepackage{enumitem}
+\usepackage[lastexercise,answerdelayed]{exercise}
 \usepackage{listings}
+\usepackage{bbm}
 
 \lstset{language=R,
     basicstyle=\small\ttfamily,
