--- a/doc/report/sections/appx-exercises.tex
+++ b/doc/report/sections/appx-exercises.tex
@@ -4,45 +4,72 @@
 
 \section{Exercises}
 
-We use the state notation described in part 2 when not stated otherwise.
+\textbf{Instructions:} Some exercises allow more than one possible answer - in those cases, an example of such an answer is provided as solution. We use the state notation described unless stated otherwise. 
 
-\begin{enumerate}
-\item Exercise:
-
-\begin{enumerate}
-\item How would you define the identity matrix in the context of kernels so that it behaves as the identity in multiplication? 
-\item Show that your definition is consistent with the properties of kernels given in part 1.
+\begin{Exercise}
+\begin{enumerate}[label=(\alph*)]
+\item How would you define the identity kernel so that it behaves as expected with respected to the kernel operations we defined? 
+\item Go back to section 1.2. Show that your definition is consistent with the properties of kernels given in 1.2.1. You can use the same notation given in that section.
 \end{enumerate}
+\end{Exercise}
+\begin{Answer}
+\begin{enumerate}[label=(\alph*)]
+\item We need I to behave as following: $ KI = IK = K, If = f, \lambda I = \lambda $, for all kernel K, measurable function f, and measure $\lambda$. Therefore, according to the operation definitions we discussed, we define I as:
+\begin{equation*}
+I(x, B) = \begin{cases}
+             0  & \text{if } x \not \in B \\
+             1  & \text{if } x \in B
+       \end{cases} \quad
+\end{equation*} for all x in E and $B \in \calF$.
 
 
+\item Our definition is consistent with the properties of kernels given in part 1 since:
+\begin{enumerate}[label=(\roman*)]
+\item for a fixed x, we have that $I = \delta_x(B)$, which is a measure.
+\item for a fixed $B \in \calF$, $I = \mathbbm{1}_B(x)$, which is a measurable function.
+\end{enumerate}
+\end{enumerate}
+\end{Answer}
 
+
+\begin{Exercise}
+\begin{enumerate}[label=(\alph*)]
+\item Come up with a way to describe our state space different from the way described in part 2.
+\item How would you represent the elements 123 and 221 from the example in section 2.1?
+\item Using your notation, how many elements would your state space have? 
+\end{enumerate}
+\end{Exercise}
+\begin{Answer}
+\begin{enumerate}[label=(\alph*)]
+\item One possibility is $i_1 ... i_n$, where$ i_k$ counts the number of times element k is picked. Notice that, in this case, $\sum i_k = n$. 
+\item 123 means we have a sample from each, so the representation would be 111. The representation of 221 would be 021.
+\item We will not have as many as $3^3$ possibilities as with our standard notation because of our constraint that $\sum i_k = n$. Rather, the possible states are in a bijection with the number of permutations of "2 bars and 3 balls": $O|O|O$. 
+For instance, 111 and 021 are represented by $O|O|O$ and $|OO|O$, respectively. Think of this as 2 bars separating a total of 3 balls into 3 groups. 
+Therefore, we have a total of $\frac{5!}{3!2!} = \binom{5}{3}$ elements.
+For the general case, where an element is describe as n entries adding up to n, we have $\binom{2n-1}{n}$ elements in our state space.
+\end{enumerate}
+\end{Answer}
+
+\begin{Exercise}
+Let $E = \{1, 2, ..., n\}$. Let a state $j = j_1...j_n$ be accessible from a state $i = i_1...i_n$ if $\{j_1, ..., j_n\} \subset E \setminus \{i_1, ..., i_n\} $. Define the kernel $K(i, \{j\})$ as: uniformly pick an accessible state y from state x. 
+\begin{enumerate}[label=(\alph*)]
+\item List (or draw) the states that communicate with 1441.
+\item Argue that this chain is not irreducible.
+\item If you were to simulate such a chain, how can you make irreducible by not changing the kernel "too much" (I mean, try not to create a whole new kernel)?
+\end{enumerate}
+\end{Exercise}
+\begin{Answer}
+\begin{enumerate}[label=(\alph*)]
+\item The values that don't show up in 1441 are 1 and 2, so the the states that communicate with 1441 are: 2222, 2223, 2232, 2233, 2322, 2323, 2333, 3333.
+\item The chain is not irreducible because no state communicate with 1234.
+\item The chain works fine, except for this problem with state 1234, so we need to find a way for other states to reach it and for them to be reached by it. One possibility is to always give a small possibility p for any state to access it and a uniform chance for it to access any of the other $4^4-1$ states. Any p is fine as long as the kernel stays a probability measure.
+\end{enumerate}
+\end{Answer}
+
+\textbf{\uppercase{PLEASE TURN PAGE FOR ANSWERS}}
 
 %2. Assume a sample i_1...i_n is greater than j_1...j_n if the number with algorithms composed by i_1, ..., i_n is greater than the one composed by j_1, ..., j_n. Example: 131 is greater than 122. Define your kernel with the following sampling step: "randomly pick a different, larger sample".
 
-\item Exercise:
 
-Let $E = \{1, 2, ..., n\}$. Let a state $j = j_1...j_n$ be accessible from a state $i = i_1...i_n$ if $\{j_1, ..., j_n\} \subset E \setminus \{i_1, ..., i_n\} $. Define the kernel $K(x, \{y\})$ as: uniformly pick an accessible state y from state x. 
-
-a) List (or draw) the states that are connected to 112.
-
-b) Argue that this chain is not irreducible.
-
-c) If you were to simulate such a chain, how can you make irreducible by not changing the kernel "too much" (I mean, try not to create a whole new kernel)?
-
-\textbf{Exercise:} 
-
-a) Come up with a way to describe our state space different from the way described in part 2.
-
-b) How would you represent the elements 123 and 221 from the example in section 2.1?
-
-c) Using your notation, how many elements would your state space have? 
-
-\textbf{Answer:} One possibility is $i_1 ... i_n$, where$ i_k$ counts the number of times element k is picked. Notice that, in this case, $\sum i_k = n$. 
-
-\item Completely describe in Kernel notation for n = 3.
-
-Prove theorem in the case of finite state spaces
-
-\end{enumerate}
-
-
+\clearpage
+\shipoutAnswer
