--- a/ref/STAT_547C.bib
+++ b/ref/STAT_547C.bib
@@ -1,24 +1,13 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% https://bibdesk.sourceforge.io/
-
-%% Created for Benjamin Bloem-Reddy at 2019-10-18 14:42:02 -0700 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-
-@inbook{Durrett:2015,
-	Author = {Durrett, Richard},
-	Booktitle = {Branching Process Models of Cancer},
-	Date-Added = {2019-10-18 14:40:11 -0700},
-	Date-Modified = {2019-10-18 14:42:02 -0700},
-	Pages = {1--63},
-	Publisher = {Springer International Publishing},
-	Series = {Mathematical Biosciences Institute Lecture Series},
-	Title = {Branching Process Models of Cancer},
-	Url = {http://dx.doi.org/10.1007/978-3-319-16065-8_1},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-3-319-16065-8_1}}
-
-
+@article{peskun,
+ ISSN = {00063444},
+ URL = {http://www.jstor.org/stable/2335011},
+ abstract = {The sampling method proposed by Metropolis et al. (1953) requires the simulation of a Markov chain with a specified π as its stationary distribution. Hastings (1970) outlined a general procedure for constructing and simulating such a Markov chain. The matrix P of transition probabilities is constructed using a defined symmetric function sij and an arbitrary transition matrix Q. Here, for a given Q, the relative merits of the two simple choices for sij suggested by Hastings (1970) are discussed. The optimum choice for sij is shown to be one of these. For the other choice, those Q are given which are known to make the sampling method based on P asymptotically less precise than independent sampling.},
+ author = {P. H. Peskun},
+ journal = {Biometrika},
+ number = {3},
+ pages = {607--612},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Optimum Monte-Carlo Sampling Using Markov Chains},
+ volume = {60},
+ year = {1973}
+}
