--- a/doc/report/sections/background.tex
+++ b/doc/report/sections/background.tex
@@ -42,7 +42,7 @@ for (i in 0:M) {
   bmean = mean(bsample)
   bmeans = c(bmeans, bmean)
   
-  # example calculating another statistics: variance
+  # example calculating another statistic: variance
   bvar = (N-1)/N*var(bsample)
   bvars = c(bvars, bvar)
   }
